--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cvcc/newservers.git"
+    "url": "git+https://github.com/cvcc/NewServers.git"
   },
   "author": "Mghanen Soufiane",
   "license": "ISC",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/cvcc/newservers#readme",
   "dependencies": {
-    "jquerygo": "0.0.16"
+    "body-parser": "^1.12.4",
+    "jquerygo": "0.0.16",
+    "mongoose": "^3.9.7",
+    "node-restful": "^0.1.18"
   }
 }
