--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "jquerygo": "0.0.16",
+    "mail-listener2": "^0.1.8",
     "mongoose": "^3.9.7",
     "node-restful": "^0.1.18"
   }
