--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquerygo": "0.0.16",
     "mail-listener2": "^0.1.8",
     "mongoose": "^3.9.7",
-    "node-restful": "^0.1.18"
+    "node-restful": "^0.1.18",
+    "socket.io": "^1.3.5"
   }
 }
